# fakeduino

./: .gitignore  CMakeLists.txt  README.md  fakeduino.cpp  fakeduino.h  fakeduino_defs.h  fakeduino_global.h
impl/: dhtimpl.cpp  dhtimpl.h  dhtimpl.ui  liquidcrystalimpl.cpp  liquidcrystalimpl.h  liquidcrystalimpl.ui  serialmonitor.cpp  serialmonitor.h  serialmonitor.ui  workspace.cpp  workspace.h  workspace.ui
include/: Arduino.h  DHTx.h  EEPROM.h  KeyPress.h  LiquidCrystal.h  Serial.h  Wire.h  fake_avr.h  qtclean.h
include/avr/: pgmspace.h
res/: fakeduino.qrc
src/: Arduino.cpp  DHTx.cpp  EEPROM.cpp  KeyPress.cpp  LiquidCrystal.cpp  Serial.cpp
